[package]
name = "data_processing"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow = "1"
argon2 = { version = "0.5.3", features = ["alloc", "password-hash"] }
lazy_static = "1.5"
hex = "0.4"
rand_core = { version = "0.6", features = ["std"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
datafusion = "39"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
