[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[example]]
# name = "cli"

# [[example]]
# name = "cli_verify"

# [[example]]
# name = "cli_get"

[dependencies]
anyhow = "1"
clap = { version = "4.4.18", features = ["derive"]}
colored = "2"
jsonxf = "1.1"
mime = "0.3"
reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
syntect = "5.1.0"