[package]
name = "blank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.windows]
version = "0.44.0"
features = ["UI_ViewManagement_Core", "UI_Text_Core",     "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_WinRT",
    "Win32_UI_Input_Touch",
    "UI_ViewManagement",
    "UI_ViewManagement_Core",
    ]