[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
futures = "0.3"
libp2p = { version = "0.53.2", features = ["mdns", "floodsub", "tokio", "noise", "tcp", "yamux", "macros"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
